# adll

./: .gitignore  Aura2.ipynb  LICENSE  README.md  debug.py  fhir.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
adll/: add.py  adll.py  graph.py
notebooks/: Aura.ipynb  Aura2.ipynb
test/: __init__.py  test_adll.py  test_graph.py
