[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adll_dev"
version = "0.0.6"
authors = [
  { name="Yong-Jun Shin", email="yshin1209@gmail.com" },
]
description = "Adaptive Deep Learning Library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yshin1209/adll"
"Bug Tracker" = "https://github.com/yshin1209/adll/issues"